--- a/2 Correlations/hw02_groceries.ipynb
+++ b/2 Correlations/hw02_groceries.ipynb
@@ -1006,7 +1006,7 @@
     "\n",
     "# Формат ответа: таблица pd.DataFrame размера (167, 167)\n",
     "sales_correlation = sparse_sales.corr()\n",
-    "# your code here\n",
+    " \n",
     "sales_correlation"
    ]
   },
@@ -1053,7 +1053,6 @@
     "# Вокруг ответа не должно быть никаких надписей array(['pip fruit']) или Index('pip fruit')\n",
     "# Это должна быть именно строка, а не строка в массиве\n",
     "top_1 =  sales_correlation['domestic eggs'].sort_values(ascending = False).index[1]\n",
-    "# your code here\n",
     "top_1\n"
    ]
   },
@@ -1100,8 +1099,6 @@
     "# Вокруг ответа не должно быть никаких надписей array(['pip fruit']) или Index('pip fruit')\n",
     "# Это должна быть именно строка, а не строка в массиве\n",
     "bottom_1 = sales_correlation['domestic eggs'].sort_values(ascending = True).index[0]\n",
-    "\n",
-    "# your code here\n",
     "bottom_1\n"
    ]
   },
@@ -1178,7 +1175,6 @@
     "# will the code be with you\n",
     "\n",
     "unique_products = df['product'].unique()\n",
-    "# your code here\n",
     "sales_correlation[np.random.choice(unique_products)].sort_values(ascending = False).head(5)\n"
    ]
   },
@@ -1191,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1223,8 +1219,6 @@
     "\n",
     "# Формат ответа: массив из строк, пример: ['soups', 'apple', 'iphone 18']\n",
     "answer = list(sales_correlation.unstack()[sales_correlation.unstack() != 1].sort_values(ascending = False).index[0])\n",
-    "\n",
-    "# your code here\n",
     "answer\n"
    ]
   },
@@ -1292,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1313,7 +1307,7 @@
        "1.152241691425711"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1318,6 @@
     "\n",
     "# Формат ответа: действительное чиссло, пример: 3.1418281828\n",
     "answer = len(sparse_sales[(sparse_sales['whole milk'] >= 1) & (sparse_sales['domestic eggs'] >= 1)]) / (len(sparse_sales) * (sparse_sales['whole milk'] >= 1).mean() * (sparse_sales['domestic eggs'] >= 1).mean())\n",
-    "# your code here\n",
     "answer\n"
    ]
   },
@@ -1366,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1388,7 +1381,7 @@
     "from itertools import combinations\n",
     "\n",
     "unique_products = sparse_sales.columns\n",
-    "lift_values = {}\n",
+    "dict = {}\n",
     "\n",
     "for product_pair in combinations(unique_products, 2):\n",
     "    product1, product2 = product_pair\n",
@@ -1402,7 +1395,7 @@
     "    \n",
     "    lift_value = joint_probability / ((prob_product1 * prob_product2) + 1e-10)\n",
     "    \n",
-    "    lift_values[product_pair] = lift_value\n"
+    "    dict[product_pair] = lift_value\n"
    ]
   },
   {
@@ -1414,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1430,15 +1423,14 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unbound method dict.values() needs an argument",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### ╰( ͡° ͜ʖ ͡° )つ▬▬ι═══════  bzzzzzzzzzz\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# will the code be with you\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Формат ответа: целое число, пример: 5555\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mdict\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# your code here\u001b[39;00m\n\u001b[0;32m      8\u001b[0m answer\n",
-      "\u001b[1;31mTypeError\u001b[0m: unbound method dict.values() needs an argument"
-     ]
+     "data": {
+      "text/plain": [
+       "9824"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1447,8 +1439,6 @@
     "\n",
     "# Формат ответа: целое число, пример: 5555\n",
     "answer = sum(1 for value in dict.values() if value > 0)\n",
-    "\n",
-    "# your code here\n",
     "answer"
    ]
   },
@@ -1461,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1475,12 +1465,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('preservation products', 'soups')\n"
+     ]
+    }
+   ],
    "source": [
     "### ╰( ͡° ͜ʖ ͡° )つ▬▬ι═══════  bzzzzzzzzzz\n",
     "# will the code be with you\n",
     "\n",
-    "# your code here\n"
+    "print(max(dict, key = dict.get))\n"
    ]
   },
   {
@@ -1492,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1506,12 +1504,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Нет, выборка слишком мала\n"
+     ]
+    }
+   ],
    "source": [
     "### ╰( ͡° ͜ʖ ͡° )つ▬▬ι═══════  bzzzzzzzzzz\n",
     "# will the code be with you\n",
     "\n",
-    "# your code here\n"
+    "print(len(sparse_sales[(sparse_sales[max(dict, key = dict.get)[0]] >= 1) & (sparse_sales[max(dict, key = dict.get)[1]] >= 1)]))\n",
+    "\n",
+    "print(\"Нет, выборка слишком мала\")"
    ]
   },
   {
@@ -1523,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1537,17 +1546,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Instant food products', 'abrasive cleaner')\n"
+     ]
+    }
+   ],
    "source": [
     "### ╰( ͡° ͜ʖ ͡° )つ▬▬ι═══════  bzzzzzzzzzz\n",
     "# will the code be with you\n",
     "\n",
-    "# your code here\n"
+    "print(min(dict, key = dict.get))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1584,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1598,12 +1615,38 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pair with highest lift: ('honey', 'ready soups')\n",
+      "Pair with lowest lift: ('Instant food products', 'abrasive cleaner')\n"
+     ]
+    }
+   ],
    "source": [
     "### ╰( ͡° ͜ʖ ͡° )つ▬▬ι═══════  bzzzzzzzzzz\n",
     "# will the code be with you\n",
     "\n",
-    "# your code here\n"
+    "product_purchase_counts = sparse_sales.sum()\n",
+    "popular_products = product_purchase_counts[product_purchase_counts > 10].index\n",
+    "filtered_sales_data = sparse_sales[popular_products]\n",
+    "dict = {}\n",
+    "for pair in combinations(popular_products, 2):\n",
+    "    product1, product2 = pair\n",
+    "    \n",
+    "    transactions_with_both = filtered_sales_data[(filtered_sales_data[product1] >= 1) & (filtered_sales_data[product2] >= 1)]\n",
+    "    joint_purchase_probability = len(transactions_with_both) / len(filtered_sales_data)\n",
+    "\n",
+    "    individual_purchase_probability1 = (filtered_sales_data[product1] >= 1).mean()\n",
+    "    individual_purchase_probability2 = (filtered_sales_data[product2] >= 1).mean()\n",
+    "    \n",
+    "    lift = joint_purchase_probability / ((individual_purchase_probability1 * individual_purchase_probability2) + 1e-10)\n",
+    "    dict[pair] = lift\n",
+    "\n",
+    "print(f'Pair with highest lift: {max(dict, key=dict.get)}')\n",
+    "print(f'Pair with lowest lift: {min(dict, key=dict.get)}')"
    ]
   },
   {
